RESOLVED FIXED305261
[GStreamer][WebRTC][Rice] Incorrect handling of IPv6 TURN addresses
https://bugs.webkit.org/show_bug.cgi?id=305261
Summary [GStreamer][WebRTC][Rice] Incorrect handling of IPv6 TURN addresses
Philippe Normand
Reported 2026-01-10 04:27:55 PST
.
Attachments
Philippe Normand
Comment 1 2026-01-10 04:56:06 PST
EWS
Comment 2 2026-01-12 04:01:50 PST
Committed 305457@main (8b4b373d16c6): <https://commits.webkit.org/305457@main> Reviewed commits have been landed. Closing PR #56392 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-12 04:02:12 PST
Note You need to log in before you can comment on or make changes to this bug.