[GStreamer][WebRTC][Rice] Incorrect handling of IPv6 TURN addresses https://bugs.webkit.org/show_bug.cgi?id=305261

Reviewed by Xabier Rodriguez-Calvar.

The string including host and  port for IPv6 addresses should be formatted as "[host]:port".

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:
(addTurnServer):

Canonical link: https://commits.webkit.org/305457@main